# Assistente-RAG

./: .dockerignore  .env  .env.example  .env.local.example  .gitignore  .ruff.toml  Dockerfile  Dockerfile.frontend  README.md  RUNBOOK.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  init.sql  middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.tsbuildinfo  vitest.config.ts
.github/: CI_SECRETS.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_conversation_read_flag.py
app/: globals.css  layout.tsx  page.tsx
app/api/proxy/[...path]/: route.ts
app/conversations/: conversations-content.tsx  page.tsx
app/knowledge/: page.tsx
app/login/: page.tsx
app/settings/: page.tsx
components/: admin-layout.tsx  admin-sidebar.tsx
components/conversations/: chat-view.tsx  conversation-filters.tsx  conversations-list.tsx
components/dashboard/: kpi-cards.tsx  message-volume-chart.tsx  question-type-chart.tsx  recent-conversations.tsx
components/knowledge/: documents-table.tsx  faq-editor.tsx  file-upload.tsx  reindex-button.tsx  semantic-search.tsx
components/settings/: ai-settings.tsx  bot-settings.tsx  notification-settings.tsx  whatsapp-settings.tsx
hooks/: use-unread-count.ts
lib/: api-client.ts  auth.ts  settings-values.ts
lib/types/: conversations.ts
scripts/: db-upgrade-test.ps1  pytest.ps1  run-tests-full.ps1  set-test-env.ps1  sync-deps.ps1  test-stack-up.ps1
scripts/ci/: pip_audit_high_gate.py
src/: config.py  dependencies.py  main.py
src/core/: encryption.py  exceptions.py  health_checks.py  logging.py  metrics.py  middleware.py  security.py
src/modules/analytics/: router.py  schemas.py  service.py
src/modules/chat/: conversations_router.py  models.py  prompt_templates.py  rag_chain.py  router.py  schemas.py  service.py
src/modules/knowledge/: chunking.py  indexer.py  models.py  retriever.py  router.py  schemas.py  service.py  storage.py
src/modules/metrics/: router.py
src/modules/settings/: health_router.py  health_schemas.py  models.py  router.py  schemas.py  service.py
src/modules/whatsapp/: admin_router.py  client.py  credentials.py  factory.py  router.py  schemas.py  service.py  validators.py
src/odontobot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/schemas/: pagination.py
src/tests/: conftest.py  factories.py
src/tests/integration/: test_analytics_api.py  test_chat_api.py  test_knowledge_api.py  test_rag_pipeline_e2e.py  test_settings_api.py  test_whatsapp_webhook.py
src/tests/unit/: test_analytics.py  test_chunking.py  test_rag_chain.py  test_retriever.py  test_settings.py  test_whatsapp_validator.py
src/workers/: cleanup_worker.py  indexing_worker.py
tests/e2e/: critical-paths.spec.ts  smoke.spec.ts
tests/unit/: bot-settings.test.tsx  file-upload.test.tsx  login-page.test.tsx  settings-page.test.tsx
types/: next-auth.d.ts
