[project]
name = "odontobot-api"
version = "0.1.0"
description = "Assistente RAG WhatsApp API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=43.0.0",
  "alembic>=1.14.0",
  "arq>=0.25",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "minio>=7.2.12",
  "openai>=1.58.0",
  "pgvector>=0.3.0",
  "pydantic-settings>=2.6.0",
  "pypdf2>=3.0.1",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.0",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "factory-boy>=3.3.1",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src/tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

# Decisao: `src/tests/` segue coberto por mypy (sem `ignore_errors`), mas sem exigir
# anotacao em toda funcao de teste/fixture (`disallow_untyped_defs = false`) para reduzir
# ruido; erros de tipo reais (arg-type, assignment, etc.) continuam bloqueando CI.
[[tool.mypy.overrides]]
module = "src.tests.*"
disallow_untyped_defs = false

